--- a/css/main.css
+++ b/css/main.css
@@ -333,7 +333,7 @@ button:hover {
   color: var(--primary-color);
 }
 
-.button {
+.searchButton {
   background-color: var(--primary-color);
   color: var(--background-color);
   padding: 1rem 2.5rem;
@@ -348,7 +348,7 @@ button:hover {
   align-self: flex-start;
 }
 
-.button:hover {
+.searchButton:hover {
   background-color: #3d6e5e;
   transform: translateY(-2px);
 }
