--- a/css/main.css
+++ b/css/main.css
@@ -3,14 +3,14 @@
   --secondary-color: #3d3d3d; /* Charcoal */
   --background-color: #fffaec; /* Cream */
   --beige-color: #f5ecd5; /* Beige */
-  --border-color: #578e7e; /* Teal */
+  --border-color: rgba(87, 142, 126, 0.2);
   --card-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 * {
   margin: 0;
-  padding: 0;
   box-sizing: border-box;
+  padding: 0;
 }
 
 body {
@@ -21,9 +21,14 @@ body {
   line-height: 1.5;
   background: linear-gradient(to bottom, #fffaec, #f5ecd5);
   color: var(--secondary-color);
+  margin: 0;
   min-height: 100vh;
+}
+
+.div-parent {
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
 }
 header {
   padding: 1.5rem;
@@ -69,6 +74,9 @@ nav li a:hover {
   justify-content: center;
   padding: 2rem;
   background-color: rgba(255, 250, 236, 0.6);
+  background-image: url("/src/assets/tress.png");
+  background-position: bottom;
+  background-repeat: no-repeat;
 }
 
 .search-container {
@@ -424,6 +432,12 @@ button:hover {
   display: grid;
   gap: 1.5rem;
 }
+.result-item {
+  margin: 10px;
+  padding: 5px;
+  border-radius: 5px;
+  padding: 1rem;
+}
 
 .item-link {
   background: var(--background-color);
@@ -438,7 +452,35 @@ button:hover {
   transform: translateY(-2px);
   box-shadow: var(--card-shadow);
 }
-
+.pagination-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.pagination {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+.pagination-button {
+  width: 150px;
+  background-color: transparent;
+  color: var(--secondary-color);
+  padding: 0.75rem 1.5rem;
+  border: none;
+  border-radius: 0.5rem;
+  font-size: 1rem;
+  cursor: pointer;
+  transition:
+    transform 0.2s,
+    background-color 0.2s;
+}
+.pagination-button:hover {
+  width: 150px;
+  color: var(--beige-color);
+  background-color: #3d6e5e;
+  transform: translateY(-2px);
+}
 iframe {
   margin-top: 20px;
   border: 1px solid var(--border-color);
