--- a/css/main.css
+++ b/css/main.css
@@ -74,9 +74,22 @@ nav li a:hover {
   justify-content: center;
   padding: 2rem;
   background-color: rgba(255, 250, 236, 0.6);
+  position: relative; 
+  overflow: hidden;
+}
+
+.main-index::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background-image: url("/src/assets/tress.png");
   background-position: bottom;
-  background-repeat: no-repeat;
+  background-repeat: repeat-x;
+  opacity: 1; 
+  z-index: -1; 
 }
 
 .search-container {
