--- a/css/main.css
+++ b/css/main.css
@@ -674,3 +674,83 @@ iframe {
     margin-bottom: 1rem;
   }
 }
+
+/*responsive*/
+
+#navList {
+  list-style-type: none;
+  margin-left: auto;
+  font-family: var(--font-title);
+  font-weight: bold;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 115px;
+  background-color: var(--primary-color);
+  text-align: center;
+  justify-content: center;
+  transition: transform 0.3s ease-in-out;
+  transform: translateX(-100%);
+  z-index: 5;
+}
+#navList li a:hover {
+  transform: scale(1.1);
+
+  transition: all 0.2s;
+}
+#navList.active {
+  transform: translateX(0);
+  display: flex;
+  flex-direction: column;
+  color: var(--text-color-dark);
+}
+
+#navList li {
+  margin: 1rem 0;
+}
+
+#navList a:hover {
+  color: var(--accent-color);
+  text-decoration: underline;
+  text-decoration-color: var(--background-color);
+  text-underline-offset: 5px;
+}
+#menuIcon {
+  display: block;
+  font-size: 2rem;
+  font-weight: 700;
+  text-decoration: none;
+  padding: 0.5rem 0.75rem;
+  color: var(--beige-color);
+  cursor: pointer;
+  z-index: 10;
+  position: relative;
+}
+
+#menuIcon::before {
+  content: "≡";
+}
+
+#menuIcon.active::before {
+  content: "X";
+}
+
+@media only screen and (min-width: 40em) {
+  #navList {
+    display: flex;
+    position: static;
+    flex-direction: row;
+    transform: none;
+    background-color: transparent;
+    padding-top: 0;
+  }
+
+  #navList li {
+    margin: 0 1rem;
+  }
+
+  #menuIcon {
+    display: none;
+  }
+}
